[project]
name = "podcast-predictor"
version = "0.1.0"
description = "Podcast listening time prediction with advanced feature engineering"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
]

[project.scripts]
train = "train_with_features:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipdb>=0.13.0",
]
